--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 </head>
 <body>
     <header>
+        <div class="">
+        <label for="btn-menu" ><i class="fa-solid fa-bars"></i></label>
+        <input type="checkbox" id="btn-menu">
+        </div>
+
         <nav class="container menu"> <!--menu de navegacion-->  
             <div> 
                 <img src="imagenes/Tobati.png" alt="" class="tobati" width="" height="">
