--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -148,7 +148,7 @@
         </div>
 
     </footer>
-    <a href="../index.html" class="ini">
+    <a href="../index.html" class="ini btn-inicio">
         <i class="fa-solid fa-house-chimney"></i>
     </a>
     <a href="#" class="subir">
