Modificacion para SEO

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descripcion" content="Las mejores artesanias solamente en Tobati">
+    <meta name="keywords" content="Artesanos, trabajos">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +15,7 @@
     <link rel="stylesheet" href="../fonts/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
-    <title>Tobati</title>
+    <title>Imagenes Tobati</title>
     <body>
 </head>
     <header>
@@ -111,7 +113,7 @@
         </div>
 
     </footer>
-    <a href="../index.html" class="ini">
+    <a href="../index.html" class="ini btn-inicio">
         <i class="fa-solid fa-house-chimney"></i>
     </a>
     <a href="#" class="subir">
