--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descripcion" content="Informamos sobre el dia a dia de tobateños">
+    <meta name="keywords" content="municipalidad tobati, festivales tobati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +16,7 @@
     <link rel="stylesheet" href="../fonts/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
-    <title>Tobati</title>
+    <title>Noticias Tobati</title>
 </head>
 <body>
     <header>
@@ -128,7 +130,7 @@
             </div>
         </div>
     </footer>
-    <a href="../index.html" class="ini">
+    <a href="../index.html" class="ini btn-inicio">
         <i class="fa-solid fa-house-chimney"></i>
     </a>
     <a href="#" class="subir">
