Actualizacion de Cards

--- a/index.html
+++ b/index.html
@@ -19,28 +19,23 @@
 </head>
 <body>
     <header>
-        <!-- <div class="">
-        <label for="btn-menu" ><i class="fa-solid fa-bars"></i></label>
-        <input type="checkbox" id="btn-menu">
-        </div> -->
-
         <nav class="container menu"> <!--menu de navegacion-->  
             <div> 
                 <img src="imagenes/Tobati.png" alt="" class="tobati" width="" height="">
-                <a href="index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>
+                <a href="index.html" class="logo"><img src="imagenes/Letra.png" alt=""></a>
             </div>
             <div class="clima">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
             </div>
             <div class="enlaces">
-                <i class="fa-solid fa-bell-concierge"></i><a href="pages/servicios.html">Servicios</a>
-                <i class="fa-solid fa-images"></i><a href="/pages/galeria.html">Galeria</a>
-                <i class="fa-solid fa-circle-info"></i></span><a href="pages/noticias.html">Noticias</a>     
-                <i class="fa-solid fa-id-card"></i></span><a href="pages/contacto.html">Contacto</a>
+                <a href="pages/servicios.html"><i class="fa-solid fa-bell-concierge"></i>Servicios</a>
+                <a href="/pages/galeria.html"><i class="fa-solid fa-images"></i>Galeria</a>
+                <a href="pages/noticias.html"><i class="fa-solid fa-circle-info"></i>Noticias</a>     
+                <a href="pages/contacto.html"><i class="fa-solid fa-id-card"></i>Contacto</a>
             </div>    
         </nav>
     </header>
-    <main class="container home">
+    <main class="container home ">
         
     </main>
 
@@ -68,7 +63,7 @@
             </li>
         </ul>
     </div>
-    <div class="container conte-carru col-sd-8 col-md-10 col-lg-7">
+    <div class="container conte-carru col-xs-8 col-md-10 col-lg-7">
         <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ul class="carousel-indicators">
