--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,18 +21,18 @@
 <body>
     <header>
         <nav class="container menu"> <!--menu de navegacion-->
-            <div class="">
+            <div> 
                 <img src="../imagenes/Tobati.png" alt="" class="tobati" width="" height="">
-                <a href="../index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>    
+                <a href="../index.html" class="logo"><img src="../imagenes/Letra.png" alt=""></a>
             </div>
             <div class="clima">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
             </div>
             <div class="enlaces">
-                <i class="fa-solid fa-bell-concierge"></i><a href="servicios.html">Servicios</a>
-                <i class="fa-solid fa-images"></i><a href="galeria.html">Galeria</a>
-                <i class="fa-solid fa-circle-info"></i></span><a href="noticias.html">Noticias</a>     
-                <i class="fa-solid fa-id-card"></i></span><a href="contacto.html">Contacto</a>
+                <a href="servicios.html"><i class="fa-solid fa-bell-concierge"></i>Servicios</a>
+                <a href="galeria.html"><i class="fa-solid fa-images"></i>Galeria</a>
+                <a href="noticias.html"><i class="fa-solid fa-circle-info"></i>Noticias</a>     
+                <a href="contacto.html"><i class="fa-solid fa-id-card"></i>Contacto</a>
             </div>      
         </nav>
     </header>
