--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -21,68 +21,74 @@
 <body>
     <header>
         <nav class="container menu"> <!--menu de navegacion-->
-            <div class="">
+            <div> 
                 <img src="../imagenes/Tobati.png" alt="" class="tobati" width="" height="">
-                <a href="../index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>
+                <a href="../index.html" class="logo"><img src="../imagenes/Letra.png" alt=""></a>
             </div>
             <div class="clima">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
             </div>
             <div class="enlaces">
-                <i class="fa-solid fa-bell-concierge"></i><a href="servicios.html">Servicios</a>
-                <i class="fa-solid fa-images"></i><a href="galeria.html">Galeria</a>
-                <i class="fa-solid fa-circle-info"></i></span><a href="noticias.html">Noticias</a>     
-                <i class="fa-solid fa-id-card"></i></span><a href="contacto.html">Contacto</a>
+                <a href="servicios.html"><i class="fa-solid fa-bell-concierge"></i>Servicios</a>
+                <a href="galeria.html"><i class="fa-solid fa-images"></i>Galeria</a>
+                <a href="noticias.html"><i class="fa-solid fa-circle-info"></i>Noticias</a>     
+                <a href="contacto.html"><i class="fa-solid fa-id-card"></i>Contacto</a>
             </div>   
         </nav>
     </header>
     <main class="container secciones" >
         <div class="row">
-            <div class="col-md-6 col-lg-4 section">Expo Villa Artesanal
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+            <div class="col-md-6 col-lg-4 section">
+                <h4>Expo Villa Artesanal</h4>
+                <div class="card card-noticias" style="width: 18rem;">
+                    <img src="../imagenes/Noti-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="card-text">Muestra en vivo a cargo de las artesanas Noguera Gamarra</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 section">Fiestas Patronales
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+            <div class="col-md-6 col-lg-4 section">
+                <h4>Fiestas Patronales</h4>
+                <div class="card card-noticias" style="width: 18rem;">
+                    <img src="../imagenes/Noti-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="card-text">Fiesta de San Juan Ára, 24 de Junio</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 section">Festivales
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+            <div class="col-md-6 col-lg-4 section">
+                <h4>Festivales</h4>
+                <div class="card card-noticias" style="width: 18rem;">
+                    <img src="../imagenes/Noti-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">LLorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="card-text">Fechas a confirmarse por las instituciones.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 section">Actividades Escolares
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+            <div class="col-md-6 col-lg-4 section">
+                <h4>Actividades Escolares</h4>
+                <div class="card card-noticias" style="width: 18rem;">
+                    <img src="../imagenes/Noti-4.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="card-text">El desfile por el dia de la independencia sigue en pie</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 section">Municipio
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+            <div class="col-md-6 col-lg-4 section">
+                <h4>Municipio</h4>
+                <div class="card card-noticias" style="width: 18rem;">
+                    <img src="../imagenes/Noti-5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="card-text">Feliz Cumple a nuestra querisidima Ciudad Tobati!!.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 section">Tobati Noticias
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+            <div class="col-md-6 col-lg-4 section">
+                <h4>Tobati Noticias</h4>
+                <div class="card card-noticias" style="width: 18rem;">
+                    <img src="../imagenes/Noti-6.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="card-text">Hermoso homenaje en Asuncion a nuestra Artesana Ediltrudis Noguera</p>
                     </div>
                 </div>
             </div>
