--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -20,86 +20,68 @@
 <body>
     <header>
         <nav class="container menu"> <!--menu de navegacion-->
-            <div class="">
+            <div> 
                 <img src="../imagenes/Tobati.png" alt="" class="tobati" width="" height="">
-                <a href="../index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>
+                <a href="../index.html" class="logo"><img src="../imagenes/Letra.png" alt=""></a>
             </div>
             <div class="clima">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
             </div>
             <div class="enlaces">
-                <i class="fa-solid fa-bell-concierge"></i><a href="servicios.html">Servicios</a>
-                <i class="fa-solid fa-images"></i><a href="galeria.html">Galeria</a>
-                <i class="fa-solid fa-circle-info"></i></span><a href="noticias.html">Noticias</a>     
-                <i class="fa-solid fa-id-card"></i></span><a href="contacto.html">Contacto</a>
+                <a href="servicios.html"><i class="fa-solid fa-bell-concierge"></i>Servicios</a>
+                <a href="galeria.html"><i class="fa-solid fa-images"></i>Galeria</a>
+                <a href="noticias.html"><i class="fa-solid fa-circle-info"></i>Noticias</a>     
+                <a href="contacto.html"><i class="fa-solid fa-id-card"></i>Contacto</a>
             </div>    
         </nav>
     </header>
     <main class="container secciones">
         <div class="row">
             <div class="col-md-2 col-md-4 section">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Hospedaje</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                <div class="card card-servicios" style="width: 21.6rem; --i:url(../imagenes/Servi-1.png)">
+                    <div class="card-body card-body-servicios">
+                        <h4 class="card-title">Hospedaje</h4>
+                        <p class="card-text">Reservá tu lugar en los distintos hospedajes que tenemos para vos y empezá a disfrutar tu día</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-2 col-md-4 section">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Turismo Guiado</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                <div class="card card-servicios" style="width: 21.6rem; --i:url(../imagenes/Servi-2.png)">
+                    <div class="card-body card-body-servicios">
+                        <h4 class="card-title">Turismo Guiado</h4>
+                        <p class="card-text">Nuestra secretaria de turismo te llevará a conocer los distintos senderos y arroyos en los cerros de Tobati</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-2 col-md-4 section">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Deportes</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                <div class="card card-servicios" style="width: 21.6rem; --i:url(../imagenes/Servi-3.png)">
+                    <div class="card-body card-body-servicios">
+                        <h4 class="card-title">Deportes</h4>
+                        <p class="card-text">Actividades al aire libre durante todo el dia para disfrutar en compañia de amigos y familiares</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-2 col-md-4 section">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Restaurant</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                <div class="card card-servicios" style="width: 21.6rem; --i:url(../imagenes/Servi-4.png)">
+                    <div class="card-body card-body-servicios">
+                        <h4 class="card-title">Restaurant</h4>
+                        <p class="card-text">Encontrarás nuestra rica comida tipica en todos los rincones de nuestra Ciudad</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-2 col-md-4 section">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Artesanias</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                <div class="card card-servicios" style="width: 21.6rem; --i:url(../imagenes/Servi-5.png)">
+                    <div class="card-body card-body-servicios">
+                        <h4 class="card-title">Artesanias</h4>
+                        <p class="card-text">En tu visita es infaltable pasar por la Villa Artesanal, donde los mejores artesanos exponen sus obras</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-2 col-md-4 section">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Hospitales</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                <div class="card card-servicios" style="width: 21.6rem; --i:url(../imagenes/Servi-6.png)">
+                    <div class="card-body card-body-servicios">
+                        <h4 class="card-title">Hospitales</h4>
+                        <p class="card-text">Ante cualquier emergencia de salud durante su estadia, por favor no dude en comunicarse con el centro de atención médica</p>
                     </div>
                 </div>
             </div>
