Actualizacion de Cards V2

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -80,7 +80,7 @@
             </li>
             <li>
                 <a href="" class="">
-                <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
@@ -99,6 +99,7 @@
         <div class="row pie">
             <div class="col-md-3 col-lg-4">
                 <iframe width="640" height="255" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p class="text-dark"><b>Edicion especial del programa Mba´éichapa, esperamos una pronta visita nuevamente</b></p>
             </div>
             <div class="col-md-3 col-lg-4">
                 <img src="../imagenes/TobaLogo.png" class="fotoPie" width="100%" alt="">
@@ -107,7 +108,7 @@
             </div>
             <div class="col-md-3 col-lg-4">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28865.17573173796!2d-57.10481965352962!3d-25.26564110698348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd2137cb199c1%3A0xabbb57218db2b011!2sTobat%C3%AD%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1650403296184!5m2!1ses!2sar" width="540" height="255" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                
+                <p class="text-dark"><b>Entrada y salida a la Ciudad desde el Mirador</b></p> 
             </div>
             
         </div>
