--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@500&family=Karla:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="fonts/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous"> <!-- Bootstrap -->
     <link rel="stylesheet" href="estilos.css">
     <title>Tobati, Turismo y Cultura</title>
 </head>
@@ -48,7 +48,7 @@
             </li>
             <li>
                 <a href="" class="">
-                <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
@@ -106,6 +106,7 @@
         <div class="row pie">
             <div class="col-xs-12 col-md-3 col-lg-4">
                 <iframe width="640" height="60%" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p class="text-dark"><b>Edicion especial del programa Mba´éichapa, esperamos una pronta visita nuevamente</b></p>
             </div>
             <div class="col-md-3 col-lg-4">
                 <img src="imagenes/TobaLogo.png" class="fotoPie" width="100%" height="60%" alt="">
@@ -115,6 +116,7 @@
             </div>
             <div class="col-xs-12 col-md-3 col-lg-4">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28865.17573173796!2d-57.10481965352962!3d-25.26564110698348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd2137cb199c1%3A0xabbb57218db2b011!2sTobat%C3%AD%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1650403296184!5m2!1ses!2sar" width="540" height="60%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+                <p class="text-dark"><b>Entrada y salida a la Ciudad desde el Mirador</b></p> 
             </div>   
         </div>
     </footer>
