--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="container menu"> <!--menu de navegacion-->  
             <div> 
                 <img src="imagenes/Tobati.png" alt="" class="tobati" width="" height="">
-                <a href="index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>
+                <a href="index.html" class="logo"><img src="imagenes/Letra.png" alt=""></a>
             </div>
             <div class="clima climaInicio">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
